<resources>
    <string name="app_name">App_Museu</string>
    <string name="title_activity_tela_home">TelaHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tela_home2">TelaHome2</string>
    <string name="open_drawer_desc">Abrir menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="criar_conta">Criar conta</string>
    <string name="login">Login</string>
    <string name="continuar_sem_login">Continuar sem Login</string>
    <string name="ou">Ou</string>
    <string name="seja_bem_vindo_a_ao_museu_da_unifor">Seja bem-vindo(a) ao Museu da Unifor!</string>
    <string name="imagem_da_logo_do_aplicativo_unifor_museu">Imagem da Logo do aplicativo Unifor+ Museu</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
    <string name="j_possui_conta">Já possui conta?</string>
    <string name="e_mail">E-mail</string>
    <string name="n_o_tem_uma_conta">Não tem uma conta?</string>
    <string name="fechar">Fechar</string>
    <string name="title_activity_web_view" />
    <string name="image_button_description">Botão que leva à página do museu</string>
    <string name="cover">Cover</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="author_place_holder">Author Place Holder</string>
    <string name="title_activity_saiba_mais">Saiba_mais</string>
    <string name="data">Data</string>
    <string name="tema">Tema</string>
    <string name="hist_ria_da_obra">História da obra</string>
    <string name="saiba_mais">Saiba mais</string>
    <string name="obra_nao_encontrada">Obra não encontrada.</string>
    <string name="bot_o_do_audio_guia_na_tela_home_da_obra_selecionada">Botão do Audio Guia na tela home da obra selecionada.</string>
    <string name="nenhuma_obra_favorita_encontrada">Nenhuma obra favorita encontrada.</string>
    <string name="settings_saved">As configurações foram salvas com sucesso.</string>
    <string name="obras_favoritas">Obras Favoritas</string>
    <string name="bot_o_de_reproduzir">botão de reproduzir</string>
    <string name="bot_o_de_pausar">botão de pausar</string>
    <string name="bot_es_de_udio">Botões de Áudio</string>
    <string name="descricao_obra">Descrição padrão da obra.</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_avancar">Avançar</string>
    <string name="pr_visualiza_o_da_imagem">Pré-visualização da imagem</string>
    <string name="configura_es_da_conta">Configurações da Conta</string>
    <string name="editar_foto_de_perfil">Editar foto de perfil</string>
    <string name="configura_es_do_app">Configurações do APP</string>
    <string name="termos_de_privacidade">Termos de privacidade</string>
    <string name="sair_logout">Sair/Logout</string>
    <string name="configura_es_conta">Configurações Conta</string>
    <string name="view">Ver</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="salvar">Salvar</string>
    <string name="notifica_es">Notificações</string>
    <string name="configura_es_do_aplicativo">Configurações do Aplicativo</string>
    <string name="foto_de_perfil">foto de perfil</string>
    <string name="exposi_o_atual">Exposição Atual</string>
    <string name="livro_informativo">Livro Informativo</string>
    <string name="miss_o">Missão</string>
    <string name="info">+ Info</string>
    <string name="hist_ria">História</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="t_tulo">Título</string>
    <string name="autor">Autor</string>
    <string name="obras_vistas_anteriormente">Obras Vistas Anteriormente</string>
    <string name="limpar_hist_rico">Limpar Histórico</string>
    <string name="estes_termos_de_servi_o_refletem_a_maneira_como_os_neg_cios_do_app_museu_funcionam_as_leis_que_se_aplicam_nossa_empresa_e_determinados_pontos_em_que_sempre_acreditamos_como_resultado_estes_termos_ajudam_a_definir_a_rela_o_do_app_museu_com_voc_na_medida_da_sua_intera_o_com_os_nossos_servi_os_por_exemplo_estes_termos_incluem_as_seguintes_se_es_o_que_voc_pode_esperar_de_n_s_descreve_o_modo_como_fornecemos_e_desenvolvemos_nossos_servi_os_o_que_esperamos_de_voc_estabelece_certas_regras_para_usar_nossos_servi_os_conte_do_nos_servi_os_do_app_museu_descreve_os_direitos_de_propriedade_intelectual_com_rela_o_ao_conte_do_que_voc_encontra_nos_nossos_servi_os_seja_ele_pertencente_a_voc_ao_app_museu_ou_a_outras_pessoas_em_caso_de_problemas_ou_discord_ncias_descreve_outros_direitos_legais_que_voc_tem_e_o_que_esperar_caso_estes_termos_sejam_violados_compreender_estes_termos_importante_porque_para_usar_nossos_servi_os_voc_precisa_aceit_los">Estes Termos de Serviço refletem a maneira como os negócios do App Museu funcionam, as leis que se aplicam à nossa empresa e determinados pontos em que sempre acreditamos. Como resultado, estes termos ajudam a definir a relação do App Museu com você na medida da sua interação com os nossos serviços. Por exemplo, estes termos incluem as seguintes seções: O que você pode esperar de nós: Descreve o modo como fornecemos e desenvolvemos nossos serviços. O que esperamos de você: Estabelece certas regras para usar nossos serviços. Conteúdo nos serviços do App Museu: Descreve os direitos de propriedade intelectual com relação ao conteúdo que você encontra nos nossos serviços, seja ele pertencente a você, ao App Museu ou a outras pessoas. Em caso de problemas ou discordâncias: Descreve outros direitos legais que você tem e o que esperar caso estes termos sejam violados. Compreender estes termos é importante porque, para usar nossos serviços, você precisa aceitá-los.</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="pol_tica_de_privacidade">Política de Privacidade</string>
    <string name="quando_voc_usa_nossos_servi_os_est_confiando_a_n_s_suas_informa_es_entendemos_que_isso_uma_grande_responsabilidade_e_trabalhamos_duro_para_proteger_essas_informa_es_e_colocar_voc_no_controle">Quando você usa nossos serviços, está confiando a nós suas informações. Entendemos que isso é uma grande responsabilidade e trabalhamos duro para proteger essas informações e colocar você no controle.</string>
    <string name="esta_pol_tica_de_privacidade_destina_se_a_ajudar_voc_a_entender_quais_informa_es_coletamos_por_que_as_coletamos_e_como_voc_pode_atualizar_gerenciar_exportar_e_excluir_essas_informa_es">Esta Política de Privacidade destina-se a ajudar você a entender quais informações coletamos, por que as coletamos e como você pode atualizar, gerenciar, exportar e excluir essas informações.</string>
    <string name="termos_de_uso_e_privacidade">Termos de Uso e Privacidade</string>
    <string name="o_museu_cultural_um_dos_principais_espa_os_dedicados_dissemina_o_da_arte_no_brasil_desde_sua_inaugura_o_ele_oferece_acesso_gratuito_a_exposi_es_promovendo_a_democratiza_o_do_conhecimento_art_stico_e_cultural_antes_restrito_a_pequenos_grupos_com_uma_rica_programa_o_o_museu_j_recebeu_exposi_es_de_artistas_renomados_e_valoriza_tamb_m_a_arte_local_reconhecido_como_um_importante_destino_cultural_ele_se_destaca_por_suas_mostras_hist_ricas_e_contempor_neas_o_museu_cultural_um_espa_o_vibrante_que_atrai_milhares_de_visitantes_celebrando_a_diversidade_e_a_riqueza_das_identidades_culturais_do_brasil">O Museu Cultural é um dos principais espaços dedicados à disseminação da arte no Brasil. Desde sua inauguração, ele oferece acesso gratuito a exposições, promovendo a democratização do conhecimento artístico e cultural, antes restrito a pequenos grupos. Com uma rica programação, o museu já recebeu exposições de artistas renomados e valoriza também a arte local. Reconhecido como um importante destino cultural, ele se destaca por suas mostras históricas e contemporâneas. O Museu Cultural é um espaço vibrante que atrai milhares de visitantes, celebrando a diversidade e a riqueza das identidades culturais do Brasil.</string>
    <string name="informa_es_sobre_o_museu">Informações sobre o Museu</string>
    <string name="hor_rio_de_funcionamento_nsegunda_a_sexta_10h_s_17h">Horário de Funcionamento:\nSegunda a Sexta: 10h às 17h</string>
    <string name="endere_o_nav_washington_soares_1321_bairro_edson_queiroz">Endereço:\nAv. Washington Soares, 1321. Bairro Edson Queiroz</string>
    <string name="ingressos_entrada_gratuita">Ingressos: Entrada Gratuita</string>
    <string name="regras_nproibido_gua_nproibido_tocar_nas_obras_nmanter_sil_ncio_durante_as_visitas">Regras:\nProibido água\nProibido tocar nas obras\nManter silêncio durante as visitas</string>
    <string name="a_miss_o_do_nosso_museu_conectar_a_comunidade_com_a_hist_ria_a_arte_e_a_cultura_oferecendo_um_espa_o_de_aprendizado_reflex_o_e_inspira_o_nosso_compromisso_preservar_e_promover_o_patrim_nio_cultural_estimulando_a_curiosidade_e_o_respeito_pela_diversidade_atrav_s_de_exposi_es_interativas_e_programas_educativos_queremos_ser_um_ponto_de_encontro_onde_todos_possam_explorar_criar_e_compartilhar_experi_ncias_significativas">A missão do nosso museu é conectar a comunidade com a história, a arte e a cultura, oferecendo um espaço de aprendizado, reflexão e inspiração. Nosso compromisso é preservar e promover o patrimônio cultural, estimulando a curiosidade e o respeito pela diversidade através de exposições interativas e programas educativos. Queremos ser um ponto de encontro onde todos possam explorar, criar e compartilhar experiências significativas.</string>
</resources>