<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_configApp"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/configura_es_do_app"/>
        <item
            android:id="@+id/nav_configConta"
            android:icon="@drawable/baseline_account_icon_24"
            android:title="@string/configura_es_conta"/>
        <item
            android:id="@+id/nav_termosPrivacidade"
            android:icon="@drawable/baseline_terms_24"
            android:title="@string/termos_de_privacidade"/>
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/sair_logout"/>
</menu>
