<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivroInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livro_informativo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@null"
            android:contentDescription="@string/image_button_description"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/screenshot_2024_10_12_214641" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_historia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1E3A8A"
                android:text="@string/hist_ria" />

            <Button
                android:id="@+id/button_missao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1E3A8A"
                android:text="@string/miss_o" />

            <Button
                android:id="@+id/buttonInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1E3A8A"
                android:text="@string/info" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>