<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/material_dynamic_primary20"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/fechar" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:src="@drawable/icon_menu"
        android:id="@+id/foto_de_perfil"
        />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/nome_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_de_usu_rio"
        android:textSize="18sp" />


</LinearLayout>