<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cover"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/mona_lisa" />

            <LinearLayout
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:layout_marginBottom="4dp"
                    android:text="@string/title_place_holder"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/autor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:lines="2"
                    android:text="@string/author_place_holder"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/data"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/tema"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/audioGuiaBotaoHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bot_o_do_audio_guia_na_tela_home_da_obra_selecionada"
                    app:srcCompat="@drawable/baseline_headphones_24" />

                <ToggleButton
                    android:id="@+id/toggleButton2"
                    android:layout_width="47dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toggle_favorite_selector"
                    android:checked="false"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:id="@+id/saibaMais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saiba_mais"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
