<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="413dp"
        android:layout_height="266dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lake" />

    <TextView
        android:id="@+id/titulo_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informa_es_sobre_o_museu"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/horario_funcionamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hor_rio_de_funcionamento_nsegunda_a_sexta_10h_s_17h"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo_info"/>

    <TextView
        android:id="@+id/endereco_contato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endere_o_nav_washington_soares_1321_bairro_edson_queiroz"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/horario_funcionamento"/>

    <TextView
        android:id="@+id/informacoes_ingressos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingressos_entrada_gratuita"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/endereco_contato"/>

    <TextView
        android:id="@+id/regras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regras_nproibido_gua_nproibido_tocar_nas_obras_nmanter_sil_ncio_durante_as_visitas"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/informacoes_ingressos"/>

</androidx.constraintlayout.widget.ConstraintLayout>
